--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -13,13 +11,20 @@
 
 # misc
 .DS_Store
+
+# Local environment settings (for different environments)
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Vercel config
 .vercel
+
+# Environment Variables (Primary file)
+.env
